--- a/forecast-vite/src/style.css
+++ b/forecast-vite/src/style.css
@@ -3,17 +3,16 @@
     border: none;
     border-radius: 10px;
     color: white;
-    padding: 15px 32px;
+    padding: 10px 32px;
     text-align: center;
     text-decoration: none;
     display: inline-block;
     font-size: 16px;
-    margin: 4px 2px;
     cursor: pointer;
 }
 
 .button:hover {
-    background-color: darkgray
+    background-color: rgb(29, 211, 211)
 }
 
 /* background-color of the app */
